# garden-1-inch

./: .gitignore  README.md  create_order_response.json  index.ts  package.json  quote_response.json  swap_error.json  test.ts
bitcoin/: Cargo.toml
bitcoin-LOP/: README.md  basic_bitcoin.did
bitcoin-LOP/src/: lib.rs  service.rs
bitcoin-LOP/src/service/: htlc_orders.rs
bitcoin/src/: main.rs  p2tr.rs  p2wsh.rs  swap.rs  tx_utils.rs
client/contracts/src/: Garden_HTLC.sol
client/tests/: config2.ts  logs-script-etherlink-base.spec.ts  main-mon-etherlink.spec.ts
relayer/: Cargo.toml  README.md  Settings.toml  local.settings.toml
relayer/src/: main.rs  primitives.rs  settings.rs
relayer/src/orderbook/: mod.rs  provider.rs
relayer/src/server/: handlers.rs  mod.rs
resolver-service/: Cargo.toml  Settings.toml
resolver-service/src/: main.rs  order_mapper.rs  settings.rs
resolver-service/src/oneinch/: mod.rs  orders.rs  quoter.rs  relayer.rs
resolver-service/src/resolver/: evm.rs  evm_abi.json  mod.rs
starknet/escrow/: Scarb.toml  abi.ts  package.json  tsconfig.json
starknet/escrow/scripts/: deploy.ts
starknet/escrow/src/: erc20.cairo  escrow.cairo  interface.cairo  lib.cairo  resolver.cairo
starknet/escrow/src/interface/: events.cairo  sn_domain.cairo  struct_hash.cairo
starknet/escrow/tests/: config.ts  deploy_erc20.ts  jest.setup.js  swap.ts  test_escrow.ts  test_resolver.ts
starknet/resolver/: README.md  package.json
starknet/resolver/src/: action-mapper.ts  api.ts  config.ts  index.ts  starknet-client.ts  test.ts  types.ts
watcher/: Cargo.toml  local_config.toml  prod_config.toml
watcher/src/: config.rs  handlers.rs  lib.rs  main.rs  server.rs  types.rs  watcher.rs
watcher/src/abi/: escrow.json  escrow_dst.json  escrow_factory.json  escrow_src.json
watcher/src/chains/: bitcoin.rs  ethereum.rs  mod.rs  starknet.rs  traits.rs
watcher/src/chains/impls/: escrow_created.rs  mod.rs  withdrawal.rs
watcher/src/orderbook/: errors.rs  mod.rs  orderbook.rs  provider.rs
watcher/src/watchers/: escrow.rs  escrow_monitor.rs  factory.rs  mod.rs
