[package]
name = "relayer"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
reqwest = "0.12.5"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
sha2 = "0.10.8"
eyre = "0.6.12"
rand = "0.8.5"
hex = "0.4.3"
config = "0.14.0"
tower = { version = "0.5.0", features = ["limit"] }
tower-http = { version = "0.6.2", features = [
    "trace",
    "cors",
    "compression-gzip",
    "compression-br",
    "timeout",
] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tokio = { version = "1.45.1", features = ["full"] }
bigdecimal = { version = "0.4.0", features = ["serde"] }
sqlx = { version = "0.8.0", features = [
    "runtime-tokio",
    "tls-native-tls",
    "postgres",
    "derive",
    "macros",
    "bigdecimal",
    "chrono",
    "json",
    "uuid",
] }
async-trait = "0.1.77"
uuid = { version = "1.7.0", features = ["v4", "serde"] }
chrono = { version = "0.4.30", features = ["serde"] }