[package]
name = "resolver-service"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { version = "1.0.23", features = ["full"] }
anyhow = "1.0.98"
async-trait = "0.1.88"
moka = { version = "0.12.10", features = ["future"] }
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
tokio = { version = "1.47.0", features = ["full"] }
toml = "0.9.4"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
