[package]
name = "watcher"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
tokio = { version = "1.47.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "migrate",
    "bigdecimal",
] }
futures = "0.3.31"
config = "0.15.13"
tower-http = { version = "0.6.6", features = ["trace", "cors"] }
axum = "0.8.4"
alloy = { version = "1.0.23" }
starknet = "0.13.0"
reqwest = { version = "0.12.22" }
anyhow = "1.0.98"
chrono = { version = "0.4.41", features = ["serde"] }
uuid = { version = "1.17.0", features = ["serde", "v4"] }
eyre = { version = "*" }
